# cpi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: sources.yaml
context/: pcm_changelog.md
cpi/: __init__.py  cli.py  llm.py  models.py  paths.py  pcm.py  store.py
cpi/pipeline/: brief.py  cluster.py  draft_pcm.py  ground.py  learn.py  score.py  triage.py
cpi/scanners/: __init__.py  arxiv.py  base.py  crossref.py  funding.py  hn.py  rss.py
cpi/templates/config/: sources.yaml  weights.yaml
cpi/templates/context/: pcm.template.yaml
cpi/templates/prompts/: brief.md  calibrate.md  draft_pcm.md  ground.md  score.md
docs/: getting-started.md  pcm-authoring.md  technical-paper.md  white-paper.md
prompts/: calibrate.md  summarize.md  triage.md
tests/: conftest.py  test_brief_validation.py  test_crossref.py  test_draft_pcm.py  test_ground.py  test_improvements.py  test_normalize_dedupe.py  test_pcm_schema.py  test_pipeline_dryrun.py  test_scoring_math.py
